googleVis 0.4.4 [2013-08-23]
----------------------------

NEW FEATURES

* gvisTable() gained new parameter formats, which allow users to 
  specify the format of numbers displayed in a table. 
  Thanks to Jacqueline Buros for providing ideas and code.

* Doughnut charts are now possible as pie charts with a hole.

Changes

* New examples for gvisBarChart, gvisColumnChart, gvisComboChart 
  demonstarting how to change the width of bars

* Extended FAQ section


googleVis 0.4.3 [2013-05-25]
----------------------------

NEW FEATURES
 
 * givsGeoChart has a new argument 'hovervar' to specify a column in
   input data that can be used to show additional information in a geo
   chart. See the new example of plotting countries' credit rating in
   the help file for a use case. Thanks to John Muschelli for suggesting
   this feature.


googleVis 0.4.2 [2013-03-16]
----------------------------

NEW FEATURES

 * The core charts (e.g. line, area, bar, column and combo charts)
   accept now also date variables for the x-axis. Thanks to Sebastian
   Campbell for pointing this out.

Changes 

 * The WorldBank demo uses now the WDI package.
   Thanks to John Maindonald for providing the code.

Bug Fixes

 * Fixed typos in Stock and Andrew example data. 
   Thanks to Sebastian Campbell for reporting this issue. 


googleVis 0.4.0 [2013-02-24]
----------------------------

NEW FEATURES
 
 * New function renderGvis to support shiny.
   This function allows user to insert googleVis output into shiny
   apps, similar to renderText and renderPlot. See the help page for
   more details. Many thanks to Joe Cheng for his support and help.

Changes

 * In order to support shiny the order of the elements of the
   gvis*()$html$chart vector changed. The positions of jsChart and
   jsFooter have been swapped.

 * The load mechanism for the Google API changed from http to https
   again. Thanks to Jacques Philip. 

 * The package dependencies changed to imports statements in DESCRIPTION. 