@@ -25,8 +25,8 @@ Using the Google Chart Tools with R
 \tabular{ll}{
 	Package: \tab googleVis\cr
 	Type: \tab Package\cr
-	Version: \tab 0.4.4\cr
-	Date: \tab 2013-08-23\cr
+	Version: \tab 0.4.5\cr
+	Date: \tab 2013-08-29\cr
 	License: \tab GPL version 2 or later\cr
 	 }
 	}
