@@ -197,7 +197,7 @@
 	title = {google{V}is: Using the {G}oogle {C}hart {T}ools with {R}},
 	author = {Markus Gesmann and Diego de Castillo},
 	year = {2013},
-	note ={R package version 0.4.4},
+	note ={R package version 0.4.5},
 	Howpublished = {\url{http://code.google.com/p/google-motion-charts-with-r/}}
 }
 
